# archive-all-my-mails

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
archive_all_my_mails/: __init__.py  auth.py  gmail_archiver.py  main.py
src/: gmail_archiver.py
