[project]
name = "archive-all-my-mails"
version = "0.1.0"
description = "A Python script to archive all emails using Gmail API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "click>=8.0.0",
    "inquirer>=3.4.0",
    "rich>=14.1.0",
]
